# thread_safe_queue_in_c

./: CMakeLists.txt  README.md  list.h  queue.c  queue.h
test/: CMakeLists.txt  queue_mt_test.cc  queue_test.cc
